log
Thu 16 May 2024 05:10:40 PM UTC: 
 tests:  0|5
total_score: 0/70
e71e0c4
Thu 16 May 2024 05:37:40 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4987197
Thu 16 May 2024 05:38:38 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|4
total_score: 15/70
9d9ee44
Thu 16 May 2024 05:39:34 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
f443893
Thu 16 May 2024 05:39:53 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
d3af3c4
Thu 16 May 2024 05:39:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
90464ec
Thu 16 May 2024 05:40:33 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
8b4c14a
Thu 16 May 2024 05:41:08 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
31ca71a
Thu 16 May 2024 05:41:17 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6a74c9a
Thu 16 May 2024 05:41:58 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
d034dcb
Thu 16 May 2024 05:42:21 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7e9d40e
Thu 16 May 2024 05:42:27 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
864eb1e
Thu 16 May 2024 05:42:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
03fa971
Thu 16 May 2024 05:42:49 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:13: error: ‘else’ without a previous ‘if’
   70 |             else
      |             ^~~~
Compilation failed
dca1396
Thu 16 May 2024 05:42:54 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|5
total_score: 0/70
d4fb3cd
Thu 16 May 2024 05:43:09 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f2e990c
Thu 16 May 2024 05:43:16 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
62a2c61
Thu 16 May 2024 05:43:47 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
e9f7423
Thu 16 May 2024 05:43:56 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
b2b9f13
Thu 16 May 2024 05:44:00 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
c9429d0
Thu 16 May 2024 05:44:11 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
1cb7eb7
Thu 16 May 2024 05:44:36 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|4
total_score: 15/70
2537a62
